--- a/app/index.html
+++ b/app/index.html
@@ -6,53 +6,13 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body class="container">
+  <body class="container" ng-controller="CartController as cartCtrl">
 
     <header>
-      <a class="brand-logo" href="#"><img alt="Brand" src="img/ctm-logo.svg"></a>
-      <nav class="navbar-default custom-nav">
-        <div class="">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            <button type="button" class="home">
-              <img class="icon" src="img/home.png"/>
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/car.png"/>
-              Vehicles
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/pet.png"/>
-              Home & pet
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/card.png"/>
-              Finances
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/person.png"/>
-              Life
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/business.png"/>
-              Business
-            </button>
-            <button type="button" class="btn btn-default navbar-btn">
-              <img src="img/plane.png"/>
-              Travel
-            </button>
-          </div>
-        </div>
-      </nav>
+      {{cartCtrl.cart.length}}
     </header>
 
-    <div class="card-list-section" ng-controller="ProductsCtrl as productCtrl">
+    <div class="container">
       <div ng-view></div>
     </div>
 
