--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body class="container" ng-controller="CartController as cartCtrl">
+  <body class="" ng-controller="CartController as cartCtrl">
 
-    <header>
+    <!-- <header>
       {{cartCtrl.cart.length}}
-    </header>
+    </header> -->
 
     <div class="container">
       <div ng-view></div>
@@ -23,7 +23,7 @@
     <script src="../bower_components/angular-resource/angular-resource.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/productController.js"></script>
     <script src="js/discountController.js"></script>
     <script src="js/services.js"></script>
   </body>
